test/schemas/invalid_parser/primitive_inherit.blink
Foo = u32
bar : Foo
